--- a/index.html
+++ b/index.html
@@ -2,29 +2,28 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-		<style>
-		body {
-		  padding: 10px;
-		  background-color: white;
-		  color: black;
-		  font-size: 25px;
-		}
-
-		.dark-mode {
-		  background-color: black;
-		  color: white;
-		}
-		</style>
 	</head>
-	<body>
+	<body id="body">
 
-		<p>Select theme: <button onclick="myFunction()">Tekan disini dark/light</button></p>
+		<label for="theme">Select theme:</label>
+		<select id="theme" name="weather" onchange="theme()">
+			<option value="light">Light</option>
+			<option value="dark">Dark</option>
+		</select>
 
-		<script>
-		function myFunction() {
-		   var element = document.body;
-		   element.classList.toggle("dark-mode");
-		}
+		<script type="text/javascript">
+			function theme(){
+				var tema = document.getElementById("theme");
+
+				if (tema.value=="light") {
+					document.body.style.backgroundColor = "white";
+					document.getElementById("body").style.color = "black";
+				}
+				else{
+					document.body.style.backgroundColor = "black";
+					document.getElementById("body").style.color = "white";
+				}
+			}
 		</script>
 
 		<h1>This is my website</h1>
